{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 16,
  "lineage": "d638e857-17d2-ee86-b94b-1ae060be7660",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mspr_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089dbc2f13b1f05cf",
            "arn": "arn:aws:ec2:us-east-1:389027614882:elastic-ip/eipalloc-089dbc2f13b1f05cf",
            "domain": "vpc",
            "id": "eipalloc-089dbc2f13b1f05cf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-89-255-222.compute-1.amazonaws.com",
            "public_ip": "98.89.255.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mspr-cogip-eip",
              "Project": "mspr-cogip"
            },
            "tags_all": {
              "Name": "mspr-cogip-eip",
              "Project": "mspr-cogip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a6afd7a4f0f60463",
            "arn": "arn:aws:ec2:us-east-1:389027614882:instance/i-0b68c7720584ea21b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b68c7720584ea21b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "mspr-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07a96af642cbbf865",
            "private_dns": "ip-10-0-1-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.39",
            "public_dns": "ec2-52-90-27-114.compute-1.amazonaws.com",
            "public_ip": "52.90.27.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01139709d88cb08f2",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c02fe8667c0e864",
            "tags": {
              "Name": "mspr-cogip-control-plane",
              "Project": "mspr-cogip",
              "Role": "control-plane"
            },
            "tags_all": {
              "Name": "mspr-cogip-control-plane",
              "Project": "mspr-cogip",
              "Role": "control-plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f8af039a16c1939"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mspr_sg",
            "aws_subnet.mspr_subnet",
            "aws_vpc.mspr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "poste_travail",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a6afd7a4f0f60463",
            "arn": "arn:aws:ec2:us-east-1:389027614882:instance/i-028122a899a9a3593",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028122a899a9a3593",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "mspr-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ca155f26c6dddbe4",
            "private_dns": "ip-10-0-1-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.7",
            "public_dns": "ec2-54-164-227-126.compute-1.amazonaws.com",
            "public_ip": "54.164.227.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07fa8acd0d1f95a7b",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c02fe8667c0e864",
            "tags": {
              "Name": "mspr-cogip-poste-travail",
              "Project": "mspr-cogip",
              "Role": "poste-travail"
            },
            "tags_all": {
              "Name": "mspr-cogip-poste-travail",
              "Project": "mspr-cogip",
              "Role": "poste-travail"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f8af039a16c1939"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mspr_sg",
            "aws_subnet.mspr_subnet",
            "aws_vpc.mspr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a6afd7a4f0f60463",
            "arn": "arn:aws:ec2:us-east-1:389027614882:instance/i-08ee17e49b8723d1c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ee17e49b8723d1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "mspr-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab30ddebd200925e",
            "private_dns": "ip-10-0-1-46.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.46",
            "public_dns": "ec2-98-93-116-254.compute-1.amazonaws.com",
            "public_ip": "98.93.116.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bd3f094d53c08663",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c02fe8667c0e864",
            "tags": {
              "Name": "mspr-cogip-worker1",
              "Project": "mspr-cogip",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "mspr-cogip-worker1",
              "Project": "mspr-cogip",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f8af039a16c1939"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mspr_sg",
            "aws_subnet.mspr_subnet",
            "aws_vpc.mspr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a6afd7a4f0f60463",
            "arn": "arn:aws:ec2:us-east-1:389027614882:instance/i-0fd20a361420c3f5d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd20a361420c3f5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "mspr-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fcb0a61725e26942",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.191",
            "public_dns": "ec2-18-209-166-133.compute-1.amazonaws.com",
            "public_ip": "18.209.166.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-020b0475b63514476",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c02fe8667c0e864",
            "tags": {
              "Name": "mspr-cogip-worker2",
              "Project": "mspr-cogip",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "mspr-cogip-worker2",
              "Project": "mspr-cogip",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f8af039a16c1939"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mspr_sg",
            "aws_subnet.mspr_subnet",
            "aws_vpc.mspr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mspr_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389027614882:internet-gateway/igw-070ac03a0d89509b6",
            "id": "igw-070ac03a0d89509b6",
            "owner_id": "389027614882",
            "tags": {
              "Name": "mspr-cogip-igw",
              "Project": "mspr-cogip"
            },
            "tags_all": {
              "Name": "mspr-cogip-igw",
              "Project": "mspr-cogip"
            },
            "vpc_id": "vpc-09d64ddfcab6f9377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mspr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mspr_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389027614882:route-table/rtb-0d7dac79652824009",
            "id": "rtb-0d7dac79652824009",
            "owner_id": "389027614882",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070ac03a0d89509b6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mspr-cogip-rt",
              "Project": "mspr-cogip"
            },
            "tags_all": {
              "Name": "mspr-cogip-rt",
              "Project": "mspr-cogip"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d64ddfcab6f9377"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mspr_igw",
            "aws_vpc.mspr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mspr_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8bd599101970869",
            "route_table_id": "rtb-0d7dac79652824009",
            "subnet_id": "subnet-06c02fe8667c0e864"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mspr_igw",
            "aws_route_table.mspr_rt",
            "aws_subnet.mspr_subnet",
            "aws_vpc.mspr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mspr_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389027614882:security-group/sg-06f8af039a16c1939",
            "description": "Security group MSPR COGIP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f8af039a16c1939",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mspr-cogip-sg",
            "name_prefix": "",
            "owner_id": "389027614882",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mspr-cogip-sg",
              "Project": "mspr-cogip"
            },
            "tags_all": {
              "Name": "mspr-cogip-sg",
              "Project": "mspr-cogip"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d64ddfcab6f9377"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mspr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mspr_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389027614882:subnet/subnet-06c02fe8667c0e864",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c02fe8667c0e864",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "389027614882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mspr-cogip-subnet",
              "Project": "mspr-cogip"
            },
            "tags_all": {
              "Name": "mspr-cogip-subnet",
              "Project": "mspr-cogip"
            },
            "vpc_id": "vpc-09d64ddfcab6f9377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mspr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mspr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389027614882:vpc/vpc-09d64ddfcab6f9377",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b76e0ffdb7029a8f",
            "default_route_table_id": "rtb-0e22ba4f1775c2c59",
            "default_security_group_id": "sg-0d4d047ed1c8415d3",
            "dhcp_options_id": "dopt-0ed2656ad13f15628",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d64ddfcab6f9377",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e22ba4f1775c2c59",
            "owner_id": "389027614882",
            "tags": {
              "Name": "mspr-cogip-vpc",
              "Project": "mspr-cogip"
            },
            "tags_all": {
              "Name": "mspr-cogip-vpc",
              "Project": "mspr-cogip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}